fix: EmptyState alignment (#331)

--- a/packages/ui/src/EmptyState.module.scss
+++ b/packages/ui/src/EmptyState.module.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: c.$emptyStateMaxWidth;
   text-align: center;
 
   .content {
